--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "built/index.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "lora-packet": "^0.8.2",
     "packet-forwarder": "^1.0.8"
   },
@@ -13,9 +14,9 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
-        "build": "tsc",
-        "start": "npm run build && node built/index.js",
-        "test": "echo \"No test specified\" && exit 0"
+    "build": "tsc",
+    "start": "npm run build && node built/index.js",
+    "test": "echo \"No test specified\" && exit 0"
   },
   "author": "Benjamin Cabé",
   "license": "MIT"
