--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "lora-packet": "^0.8.2",
-    "packet-forwarder": "^1.0.8"
+    "packet-forwarder": "^1.0.8",
+    "packet-forwarder-json-builder": "^2.0.6",
+    "random": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.9",
+    "@types/random": "^2.1.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
