--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/node": "^14.14.9",
     "@types/random": "^2.1.1",
+    "typed-emitter": "^1.3.1",
     "typescript": "^4.1.2"
   },
   "scripts": {
